# mult-terminal

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: models.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/ssh/: mod.rs  session.rs
src-tauri/src/transfer/: ftp.rs  mod.rs  progress.rs  sftp.rs  types.rs
src-tauri/src/workspace/: detached.rs  mod.rs
src/components/: FileTransferPanel.vue  NewTerminalModal.vue  SettingsModal.vue  SshManager.vue  TerminalGrid.vue  TerminalPanel.vue  Toolbar.vue  WorkspaceTabs.vue
src/composables/: useDetach.ts  useDrag.ts  useKeyboard.ts  useTerminal.ts
src/stores/: file-transfer.ts  ssh-profiles.ts  terminals.ts  theme.ts  workspaces.ts
src/styles/: themes.css
src/types/: index.ts  layouts.ts  splitpanes.d.ts
