[package]
name = "multerm"
version = "0.0.0"
description = "Multi-Terminal Manager"
authors = []
edition = "2021"

[lib]
name = "multerm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
which = "6"
shellexpand = "3"
russh-sftp = "2.1.1"
suppaftp = { version = "6", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
